css/theme.css
/* ... */
body input#coupon_code,
body input[type="text"],
body input[type="password"],
body input[type="email"],
body input[type="tel"],
body input[type="date"],
body input[type="time"],
body input[type="datetime"],
body input[type="url"],
body textarea,
body select,
body select:focus,
body textarea:focus,
body .cherga_content_wrapper .widget_product_search input[type="search"].search-field {
	font-family: "Roboto", sans-serif;
	font-size: 14px;
	font-weight: 400;
	color: #a0a7ae;
	border: solid 2px #2e3032;
}

body input#coupon_code::-moz-placeholder,
body input[type="text"]::-moz-placeholder,
body input[type="password"]::-moz-placeholder,
body input[type="email"]::-moz-placeholder,
body input[type="tel"]::-moz-placeholder,
body input[type="date"]::-moz-placeholder,
body input[type="time"]::-moz-placeholder,
body input[type="datetime"]::-moz-placeholder,
body input[type="url"]::-moz-placeholder {
	color: #a0a7ae;
	opacity: 1;
}

body input#coupon_code::-webkit-input-placeholder,
body input[type="text"]::-webkit-input-placeholder,
body input[type="password"]::-webkit-input-placeholder,
body input[type="email"]::-webkit-input-placeholder,
body input[type="tel"]::-webkit-input-placeholder,
body input[type="date"]::-webkit-input-placeholder,
body input[type="time"]::-webkit-input-placeholder,
body input[type="datetime"]::-webkit-input-placeholder,
body input[type="url"]::-webkit-input-placeholder {
	color: #a0a7ae;
}

body textarea::-webkit-input-placeholder {
	color: #a0a7ae;
}

body textarea::-moz-placeholder {
	opacity: 1;
	color: #a0a7ae;
}

a.cherga_button,
input[type="button"],
input[type="reset"],
input[type="submit"] {
	font-family: "Roboto", sans-serif;
	font-size: 14px;
	color: #ffffff;
	background: #3a3e43;
}

/* ---------------------------------- */
/* ---------- OWL Carousel ---------- */
/* ---------------------------------- */
.cherga_owlCarousel {
	opacity: 1;
	position: relative;
}
.cherga_owlCarousel .item {
	display: block;
	width: 100%;
}
.cherga_owlCarousel .item img {
	display: block;
	width: 100%;
	height: auto;
}

.cherga_ribbon_slider_wrapper.owl-theme .owl-nav,
.cherga_owlCarousel.owl-theme .owl-nav {
	width: 100%;
	height: 19px;
	margin-top: 0;
	position: absolute;
	top: 50%;
	z-index: 45;
	-webkit-transform: translateY(-50%);
	transform: translateY(-50%);
}

.cherga_ribbon_slider_wrapper.owl-theme .owl-nav [class*="owl-"],
.cherga_owlCarousel.owl-theme .owl-nav [class*="owl-"] {
	width: 20px;
	height: 20px;
	margin: 0;
	padding: 0;
	border-radius: 0;
	background: transparent;
	position: absolute;
	-webkit-transition: all .3s;
	transition: all .3s;
	z-index: 17;
}

.cherga_ribbon_slider_wrapper.owl-theme .owl-nav [class*="owl-"]:hover,
.cherga_owlCarousel.owl-theme .owl-nav [class*="owl-"]:hover {
	background: none;
}
.cherga_ribbon_slider_wrapper.owl-theme .owl-nav [class*="owl-"]:before,
.cherga_ribbon_slider_wrapper.owl-theme .owl-nav [class*="owl-"]:after,
.cherga_owlCarousel.owl-theme .owl-nav [class*="owl-"]:before,
.cherga_owlCarousel.owl-theme .owl-nav [class*="owl-"]:after {
	content: '';
	position: absolute;
	transition: background 400ms;
	background: #ffffff;
	box-shadow: 0 0 5px rgba(0,0,0,0.2);
}
.cherga_ribbon_slider_wrapper .owl-prev,
.cherga_owlCarousel .owl-prev {
	background-size: 20px 20px !important;
	left: 45px;
	transform: rotate(45deg) scale(1);
	transition: transform 400ms;
}
.cherga_ribbon_slider_wrapper .owl-prev:hover,
.cherga_owlCarousel .owl-prev:hover {
	transform: rotate(45deg) scale(1.5);
}
.cherga_ribbon_slider_wrapper .owl-prev:before,
.cherga_owlCarousel .owl-prev:before {
	left: 0;
	top: 0;
	width: 2px;
	height: 20px;
}
.cherga_ribbon_slider_wrapper .owl-prev:after,
.cherga_owlCarousel .owl-prev:after {
	left: 0;
	bottom: 0;
	width: 20px;
	height: 2px;
}
.cherga_ribbon_slider_wrapper .owl-next,
.cherga_owlCarousel .owl-next {
	background-size: 20px 20px !important;
	right: 45px;
	transform: rotate(-45deg) scale(1);
	transition: transform 400ms;
}
.cherga_ribbon_slider_wrapper .owl-next:hover,
.cherga_owlCarousel .owl-next:hover {
	transform: rotate(-45deg) scale(1.5);
}
.cherga_ribbon_slider_wrapper .owl-next:before,
.cherga_owlCarousel .owl-next:before {
	right: 0;
	top: 0;
	width: 2px;
	height: 20px;
}
.cherga_ribbon_slider_wrapper .owl-next:after,
.cherga_owlCarousel .owl-next:after {
	right: 0;
	bottom: 0;
	width: 20px;
	height: 2px;
}

body .owl-carousel {
	display: block;
}

.cherga_no_result_search_form form {
	position: relative;
}

.cherga_no_result_search_form .cherga_icon_search {
	position: absolute;
	top: 5px;
	right: 13px;
}

/* ---------------------------------- */
/* ---------- Slick Slider ---------- */
/* ---------------------------------- */
.slick-slider {
	position: relative;
	display: block;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	-webkit-touch-callout: none;
	touch-action: pan-y;
	-webkit-tap-highlight-color: transparent;
}

.slick-list {
	position: relative;
	display: block;
	overflow: hidden;
	margin: 0;
	padding: 0;
	outline: none !important;
}
.slick-list:focus {
	outline: none !important;
}
.slick-list.dragging {
	cursor: pointer;
	cursor: hand;
}
.slick-slider .slick-track,
.slick-slider .slick-list {
	-webkit-transform: translate3d(0, 0, 0);
	-moz-transform: translate3d(0, 0, 0);
	-ms-transform: translate3d(0, 0, 0);
	-o-transform: translate3d(0, 0, 0);
	transform: translate3d(0, 0, 0);
}
.slick-track {
	position: relative;
	top: 0;
	left: 0;
	display: block;
}
.slick-track:before,
.slick-track:after {
	display: table;
	content: '';
}
.slick-track:after {
	clear: both;
}
.slick-loading .slick-track {
	visibility: hidden;
}
.slick-slide {
	display: none;
	float: left;
	height: 100%;
	min-height: 1px;
	outline: none !important;
	cursor: pointer;
}
.testimonials-nav .slick-active,
.testimonials-nav .slick-center,
.testimonials-nav .slick-current {
	cursor: default;
}
/* ... */

